--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 frontend and backend
               </div>
               <h1 class="hero-heading">
-                Learn to program by watching professionals
+                Learn to program by<br>watching<br>professionals
               </h1>
               <p class="hero-text">
-                See how experienced developers solve problems in real time
+                See how experienced developers solve<br>problems in real time
               </p>
             </div>
             <div class="hero-bottom">
