full site add form

--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
           </div>
 
         <!-- registretions form -->
+          <form action="https://echo.htmlacademy.ru" class="signup-form" method="post">
+            <h2 class="signup-form-heading">
+              Sign up for the course and get free 7 days
+            </h2>
+            <div class="signup-form-fields">
+              <input type="text" name="name" placeholder="Fist-name" class="signup-form-field" aria-label="name" required>
+              <input type="text" name="last_name" placeholder="Last-name" class="signup-form-field" aria-label="last_name" required>
+
+              <input type="email" name="email" placeholder="Email@ address" class="signup-form-field" aria-label="email" required>
+
+              <input type="password" name="password" placeholder="password" class="signup-form-field" aria-label="password" required>
+            </div>
+            <button class="btn-form" type="submit">Claim your free trial</button>
+            <div class="signup-form-notice">
+              By clicking the button, you are agreeing to our <a class="signup-form-notice-link" href="#">Terms and Services</a>
+            </div>
+          </form>
+
       </div>
     </div>
   </div>
